--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -1325,13 +1325,11 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
 {%             if peer_group.additional_paths.send is arista.avd.defined %}
-{%                 set ps_pg_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send' %}
+{%                 set ps_pg_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send ' ~ peer_group.additional_paths.send %}
 {%                 if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined and peer_group.additional_paths.send == 'ecmp' %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' ecmp limit ' ~ peer_group.additional_paths.send_ecmp_limit %}
+{%                     set ps_pg_add_path = ps_pg_add_path ~ ' limit ' ~ peer_group.additional_paths.send_ecmp_limit %}
 {%                 elif peer_group.additional_paths.send_limit is arista.avd.defined and peer_group.additional_paths.send == 'limit' %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' limit ' ~ peer_group.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' ' ~ peer_group.additional_paths.send %}
+{%                     set ps_pg_add_path = ps_pg_add_path ~ ' ' ~ peer_group.additional_paths.send_limit %}
 {%                 endif %}
       {{ ps_pg_add_path }}
 {%             endif %}
@@ -1346,13 +1344,11 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
 {%             if neighbor.additional_paths.send is arista.avd.defined %}
-{%                 set ps_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send' %}
+{%                 set ps_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send ' ~ neighbor.additional_paths.send %}
 {%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ecmp limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
 {%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send %}
+{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
 {%                 endif %}
       {{ ps_neighbor_add_path }}
 {%             endif %}
@@ -1845,13 +1841,11 @@ router bgp {{ router_bgp.as }}
          bgp additional-paths receive
 {%             endif %}
 {%             if vrf.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
-{%                 set ipv4_add_path = 'bgp additional-paths send' %}
+{%                 set ipv4_add_path = 'bgp additional-paths send ' ~ vrf.address_family_ipv4.bgp.additional_paths.send %}
 {%                 if vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and vrf.address_family_ipv4.bgp.additional_paths.send == 'ecmp' %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ecmp limit ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
+{%                     set ipv4_add_path = ipv4_add_path ~ ' limit ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
 {%                 elif vrf.address_family_ipv4.bgp.additional_paths.send_limit is arista.avd.defined and vrf.address_family_ipv4.bgp.additional_paths.send == 'limit' %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' limit ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.send %}
+{%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_limit %}
 {%                 endif %}
          {{ ipv4_add_path }}
 {%             endif %}
@@ -2013,13 +2007,11 @@ router bgp {{ router_bgp.as }}
          bgp additional-paths receive
 {%             endif %}
 {%             if vrf.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
-{%                 set vrf_add_path = 'bgp additional-paths send' %}
+{%                 set vrf_add_path = 'bgp additional-paths send ' ~ vrf.address_family_ipv6.bgp.additional_paths.send  %}
 {%                 if vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and vrf.address_family_ipv6.bgp.additional_paths.send == 'ecmp' %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ecmp limit ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
+{%                     set vrf_add_path = vrf_add_path ~ ' limit ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
 {%                 elif vrf.address_family_ipv6.bgp.additional_paths.send_limit is arista.avd.defined and vrf.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
-{%                     set vrf_add_path = vrf_add_path ~  ' limit ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_limit %}
-{%                 else %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.send %}
+{%                     set vrf_add_path = vrf_add_path ~  ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_limit %}
 {%                 endif %}
 {%                 if vrf.address_family_ipv6.bgp.additional_paths.prefix_list is arista.avd.defined %}
 {%                     set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.prefix_list %}
