--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/logging.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/logging.j2
@@ -6,6 +6,18 @@
 {# eos - logging #}
 {% if logging is arista.avd.defined %}
 !
+{%     if logging.buffered.level is arista.avd.defined('disabled') %}
+no logging buffered
+{%     elif logging.buffered.size is arista.avd.defined or logging.buffered.level is arista.avd.defined %}
+{%         set logging_buffered_cli = "logging buffered" %}
+{%         if logging.buffered.size is arista.avd.defined %}
+{%             set logging_buffered_cli = logging_buffered_cli ~ " " ~ logging.buffered.size %}
+{%         endif %}
+{%         if logging.buffered.level is arista.avd.defined  %}
+{%             set logging_buffered_cli = logging_buffered_cli ~ " " ~ logging.buffered.level %}
+{%         endif %}
+{{ logging_buffered_cli }}
+{%     endif %}
 {%     if logging.trap is arista.avd.defined('disabled') %}
 no logging trap
 {%     elif logging.trap is arista.avd.defined %}
@@ -21,24 +33,6 @@ no logging monitor
 {%     elif logging.monitor is arista.avd.defined %}
 logging monitor {{ logging.monitor }}
 {%     endif %}
-{%     if logging.event.storm_control.discards.global is arista.avd.defined(true) %}
-logging event storm-control discards global
-{%     endif %}
-{%     if logging.event.storm_control.discards.interval is arista.avd.defined %}
-logging event storm-control discards interval {{ logging.event.storm_control.discards.interval }}
-{%     endif %}
-{%     if logging.buffered.level is arista.avd.defined('disabled') %}
-no logging buffered
-{%     elif logging.buffered.size is arista.avd.defined or logging.buffered.level is arista.avd.defined %}
-{%         set logging_buffered_cli = "logging buffered" %}
-{%         if logging.buffered.size is arista.avd.defined %}
-{%             set logging_buffered_cli = logging_buffered_cli ~ " " ~ logging.buffered.size %}
-{%         endif %}
-{%         if logging.buffered.level is arista.avd.defined  %}
-{%             set logging_buffered_cli = logging_buffered_cli ~ " " ~ logging.buffered.level %}
-{%         endif %}
-{{ logging_buffered_cli }}
-{%     endif %}
 {%     if logging.synchronous.level is arista.avd.defined('disabled') %}
 no logging synchronous
 {%     elif logging.synchronous is arista.avd.defined %}
@@ -52,7 +46,8 @@ logging synchronous level {{ logging.synchronous.level | arista.avd.default("cri
 {%             endif %}
 {%             set logging_host_cli = logging_host_cli ~ " host " ~ host.name %}
 {%             if host.ports is arista.avd.defined %}
-{%                 set logging_host_cli = logging_host_cli ~ ' ' ~ host.ports | join(' ') %}
+{%                 set ports = host.ports | arista.avd.natural_sort %}
+{%                 set logging_host_cli = logging_host_cli ~ ' ' ~ ports | join(' ') %}
 {%             endif %}
 {%             if host.protocol is arista.avd.defined() and host.protocol is not arista.avd.defined("udp") %}
 {%                 set logging_host_cli = logging_host_cli ~ " protocol " ~ host.protocol | lower %}
