--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -725,6 +725,17 @@ router bgp {{ router_bgp.as }}
 {%             elif neighbor.activate is arista.avd.defined(false) %}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
+{%             if neighbor.additional_paths.send is arista.avd.defined %}
+{%                 set evpn_neighbor_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send ' ~ peer_group.additional_paths.send %}
+{%                 if neighbor.additional_paths.send == 'disabled' %}
+{%                     set evpn_neighbor_add_path = 'no neighbor ' ~ neighbor.ip_address ~ ' additional-paths send any' %}
+{%                 elif neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                     set evpn_neighbor_add_path = evpn_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                     set evpn_neighbor_add_path = evpn_neighbor_add_path ~ ' ' ~ peer_group.additional_paths.send_limit %}
+{%                 endif %}
+      {{ evpn_neighbor_add_path }}
+{%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
@@ -898,6 +909,15 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
+{%             if neighbor.additional_paths.send is arista.avd.defined %}
+{%                 set ipv4_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-path send ' ~  neighbor.additional_paths.send %}
+{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
+{%                 endif %}
+      {{ ipv4_neighbor_add_path }}
+{%             endif %}
 {%             if neighbor.route_map_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
@@ -1120,6 +1140,15 @@ router bgp {{ router_bgp.as }}
 {%             elif neighbor.activate is arista.avd.defined(false) %}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
+{%             if neighbor.additional_paths.send is arista.avd.defined %}
+{%                 set ipv6_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-path send ' ~  neighbor.additional_paths.send %}
+{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                     set ipv6_neighbor_add_path = ipv6_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                     set ipv6_neighbor_add_path = ipv6_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
+{%                 endif %}
+      {{ ipv6_neighbor_add_path }}
+{%             endif %}
 {%         endfor %}
 {%         for network in router_bgp.address_family_ipv6.networks | arista.avd.natural_sort('prefix') %}
 {%             if network.route_map is arista.avd.defined %}
@@ -1175,6 +1204,9 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} activate
 {%             elif peer_group.activate is arista.avd.defined(false) %}
       no neighbor {{ peer_group.name }} activate
+{%             endif %}
+{%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
+      neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_ipv6_multicast.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -2039,6 +2071,9 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if neighbor.prefix_list_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_out }} out
+{%                 endif %}
+{%                 if neighbor.additional_paths.receive is arista.avd.defined(true) %}
+         neighbor {{ neighbor.ip_address }} additional-paths receive
 {%                 endif %}
 {%                 if neighbor.additional_paths.send is arista.avd.defined %}
 {%                     set vrf_ipv6_add_path = "neighbor " ~ neighbor.ip_address ~ " additional-paths send " ~  neighbor.additional_paths.send %}
