--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -964,6 +964,15 @@ router bgp {{ router_bgp.as }}
 {%         elif router_bgp.address_family_ipv4.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
 {%         endif %}
+{%         if router_bgp.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
+{%             set ipv4_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv4.bgp.additional_paths.send %}
+{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'ecmp' %}
+{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
+{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'limit' %}
+{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_limit %}
+{%             endif %}
+      {{ ipv4_bgp_add_path }}
+{%         endif %}
 {%         for redistribute_route in router_bgp.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
@@ -1161,6 +1170,15 @@ router bgp {{ router_bgp.as }}
       bgp redistribute-internal
 {%         elif router_bgp.address_family_ipv6.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
+{%         endif %}
+{%         if router_bgp.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
+{%             set ipv6_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv6.bgp.additional_paths.send %}
+{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'ecmp' %}
+{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
+{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
+{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_limit %}
+{%             endif %}
+      {{ ipv6_bgp_add_path }}
 {%         endif %}
 {%         for redistribute_route in router_bgp.address_family_ipv6.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
