--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -726,13 +726,13 @@ router bgp {{ router_bgp.as }}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
 {%             if neighbor.additional_paths.send is arista.avd.defined %}
-{%                 set evpn_neighbor_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send ' ~ peer_group.additional_paths.send %}
+{%                 set evpn_neighbor_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send ' ~ neighbor.additional_paths.send %}
 {%                 if neighbor.additional_paths.send == 'disabled' %}
 {%                     set evpn_neighbor_add_path = 'no neighbor ' ~ neighbor.ip_address ~ ' additional-paths send any' %}
 {%                 elif neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
 {%                     set evpn_neighbor_add_path = evpn_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
 {%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
-{%                     set evpn_neighbor_add_path = evpn_neighbor_add_path ~ ' ' ~ peer_group.additional_paths.send_limit %}
+{%                     set evpn_neighbor_add_path = evpn_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
 {%                 endif %}
       {{ evpn_neighbor_add_path }}
 {%             endif %}
@@ -855,7 +855,7 @@ router bgp {{ router_bgp.as }}
    !
    address-family ipv4
 {%         for peer_group in router_bgp.address_family_ipv4.peer_groups | arista.avd.natural_sort('name') %}
-{%             if peer_group.additional_paths.receive is arista.avd.defined %}
+{%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
 {%             if peer_group.route_map_in is arista.avd.defined %}
@@ -1029,7 +1029,7 @@ router bgp {{ router_bgp.as }}
 {%             elif neighbor.activate is arista.avd.defined(false) %}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
-{%             if neighbor.additional_paths.receive is arista.avd.defined %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
          neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
 {%         endfor %}
@@ -1089,7 +1089,7 @@ router bgp {{ router_bgp.as }}
    !
    address-family ipv6
 {%         for peer_group in router_bgp.address_family_ipv6.peer_groups | arista.avd.natural_sort('name') %}
-{%             if peer_group.additional_paths.receive is arista.avd.defined %}
+{%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
 {%             if peer_group.route_map_in is arista.avd.defined %}
@@ -1170,6 +1170,11 @@ router bgp {{ router_bgp.as }}
       bgp redistribute-internal
 {%         elif router_bgp.address_family_ipv6.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
+{%         endif %}
+{%         if router_bgp.address_family_ipv6.bgp.additional_paths.install is arista.avd.defined(true) %}
+      bgp additional-paths install
+{%         elif router_bgp.address_family_ipv6.bgp.additional_paths.install_ecmp_primary is arista.avd.defined(true) %}
+      bgp additional-paths install ecmp-primary
 {%         endif %}
 {%         if router_bgp.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
 {%             set ipv6_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv6.bgp.additional_paths.send %}
@@ -1788,6 +1793,18 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.route_map_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
+      neighbor {{ neighbor.ip_address }} additional-paths receive
+{%             endif %}
+{%             if neighbor.additional_paths.send is arista.avd.defined %}
+{%                 set vrf_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send ' ~  neighbor.additional_paths.send %}
+{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                     set vrf_neighbor_add_path = vrf_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                 elif vrf.bgp.additional_paths.send_limit is arista.avd.defined and vrf.bgp.additional_paths.send == 'limit' %}
+{%                     set vrf_neighbor_add_path = vrf_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
+{%                 endif %}
+      {{ vrf_neighbor_add_path }}
+{%             endif %}
 {%         endfor %}
 {%         for network in vrf.networks | arista.avd.natural_sort('prefix') %}
 {%             if network.route_map is arista.avd.defined %}
@@ -1800,6 +1817,18 @@ router bgp {{ router_bgp.as }}
       bgp redistribute-internal
 {%         elif vrf.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
+{%         endif %}
+{%         if vrf.bgp.additional_paths.receive is arista.avd.defined(true) %}
+      bgp additional-paths receive
+{%         endif %}
+{%         if vrf.bgp.additional_paths.send is arista.avd.defined %}
+{%             set vrf_add_path = 'bgp additional-path send ' ~  vrf.bgp.additional_paths.send %}
+{%             if vrf.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and vrf.bgp.additional_paths.send == 'ecmp' %}
+{%                 set vrf_add_path = vrf_add_path ~ ' limit ' ~ vrf.bgp.additional_paths.send_ecmp_limit %}
+{%             elif vrf.bgp.additional_paths.send_limit is arista.avd.defined and vrf.bgp.additional_paths.send == 'limit' %}
+{%                 set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.bgp.additional_paths.send_limit %}
+{%             endif %}
+      {{ vrf_add_path }}
 {%         endif %}
 {%         for aggregate_address in vrf.aggregate_addresses | arista.avd.natural_sort('prefix') %}
 {%             set aggregate_address_cli = "aggregate-address " ~ aggregate_address.prefix %}
@@ -1921,7 +1950,7 @@ router bgp {{ router_bgp.as }}
 {%                 if neighbor.prefix_list_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_out }} out
 {%                 endif %}
-{%                 if neighbor.additional_paths.receive is arista.avd.defined %}
+{%                 if neighbor.additional_paths.receive is arista.avd.defined(true) %}
          neighbor {{ neighbor.ip_address }} additional-paths receive
 {%                 endif %}
 {%                 if neighbor.additional_paths.send is arista.avd.defined %}
@@ -1931,7 +1960,7 @@ router bgp {{ router_bgp.as }}
 {%                     elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
 {%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
 {%                     endif %}
-{%                     if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined %}
+{%                     if neighbor.bgp.additional_paths.prefix_list is arista.avd.defined %}
 {%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' ' ~ neighbor.additional_paths.prefix_list %}
 {%                     endif %}
          {{ vrf_ipv4_add_path }}
@@ -2006,7 +2035,7 @@ router bgp {{ router_bgp.as }}
 {%                 if neighbor.route_map_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%                 endif %}
-{%                 if neighbor.additional_paths.receive is arista.avd.defined %}
+{%                 if neighbor.additional_paths.receive is arista.avd.defined(true) %}
          neighbor {{ neighbor.ip_address }} additional-paths receive
 {%                 endif %}
 {%             endfor %}
@@ -2063,9 +2092,6 @@ router bgp {{ router_bgp.as }}
 {%                 elif vrf.address_family_ipv6.bgp.additional_paths.send_limit is arista.avd.defined and vrf.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
 {%                     set vrf_add_path = vrf_add_path ~  ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_limit %}
 {%                 endif %}
-{%                 if vrf.address_family_ipv6.bgp.additional_paths.prefix_list is arista.avd.defined %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.prefix_list %}
-{%                 endif %}
          {{ vrf_add_path }}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv6.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -2100,7 +2126,7 @@ router bgp {{ router_bgp.as }}
 {%                     elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
 {%                         set vrf_ipv6_add_path = vrf_ipv6_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
 {%                     endif %}
-{%                     if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined %}
+{%                     if neighbor.bgp.additional_paths.prefix_list is arista.avd.defined %}
 {%                         set vrf_ipv6_add_path = vrf_ipv6_add_path ~ ' ' ~ neighbor.additional_paths.prefix_list %}
 {%                     endif %}
          {{ vrf_ipv6_add_path }}
@@ -2165,7 +2191,7 @@ router bgp {{ router_bgp.as }}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%                 endif %}
 {%             endfor %}
-{%             if neighbor.additional_paths.receive is arista.avd.defined %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
          neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
 {%             for network in vrf.address_family_ipv6_multicast.networks | arista.avd.natural_sort('prefix') %}
