--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-internet-exit.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-internet-exit.j2
@@ -10,15 +10,18 @@ router internet-exit
 {%     for exit_group in router_internet_exit.exit_groups | arista.avd.natural_sort('name') %}
    exit-group {{ exit_group.name }}
 {%         for local_connection in exit_group.local_connections | arista.avd.natural_sort('name') %}
-       local connection {{ local_connection.name }}
+      local connection {{ local_connection.name }}
 {%         endfor %}
 {%         if exit_group.fib_default is arista.avd.defined(true) %}
-       fib-default
+      fib-default
 {%         endif %}
 {%         if not loop.last %}
    !
 {%         endif %}
 {%     endfor %}
+{%     if router_internet_exit.policies is arista.avd.defined %}
+   !
+{%     endif %}
 {%     for policy in router_internet_exit.policies | arista.avd.natural_sort('name') %}
    policy {{ policy.name }}
 {# Order of exit-groups MUST be preserved #}
