--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-path-selection.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-path-selection.j2
@@ -58,7 +58,8 @@ router path-selection
       !
       {{ local_ip_def }}
 {%             if local_ip.stun.server_profiles is arista.avd.defined %}
-         stun server-profile {{ local_ip.stun.server_profiles | join(" ") | arista.avd.natural_sort }}
+{%                 set server_profiles = local_ip.stun.server_profiles | arista.avd.natural_sort %}
+         stun server-profile {{ server_profiles | join(" ") }}
 {%             endif %}
 {%         endfor %}
 {#      peer dynamic #}
@@ -82,7 +83,7 @@ router path-selection
          name {{ static_peer.name }}
 {%             endif %}
 {# Not sorting these ipv4 addresses as EOS is reordering them based on a set logic which we cannot predict and changes across python version #}
-{%             for ipv4_address in static_peer.ipv4_addresses | arista.avd.default([]) | arista.avd.natural_sort %}
+{%             for ipv4_address in static_peer.ipv4_addresses | arista.avd.default([]) %}
          ipv4 address {{ ipv4_address }}
 {%             endfor %}
 {%         endfor %}
