--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/aaa-server-groups-radius.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/aaa-server-groups-radius.j2
@@ -5,8 +5,7 @@
 #}
 {# eos - aaa server groups #}
 {% for aaa_server_group in aaa_server_groups | arista.avd.natural_sort('name') | arista.avd.natural_sort('type') %}
-{# To match the EOS cli sequence type ldap is added in another template #}
-{%     if aaa_server_group.type | lower != 'ldap' %}
+{%     if aaa_server_group.type == 'radius' %}
 !
 aaa group server {{ aaa_server_group.type }} {{ aaa_server_group.name }}
 {%         if aaa_server_group.servers is arista.avd.defined %}
