--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/aaa-server-groups-tacacs-plus.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/aaa-server-groups-tacacs-plus.j2
@@ -3,9 +3,9 @@
  Use of this source code is governed by the Apache License 2.0
  that can be found in the LICENSE file.
 #}
-{# eos - aaa server groups ldap #}
-{% for aaa_server_group in aaa_server_groups | arista.avd.natural_sort('name') %}
-{%     if aaa_server_group.type == 'ldap' %}
+{# eos - aaa server groups #}
+{% for aaa_server_group in aaa_server_groups | arista.avd.natural_sort('name') | arista.avd.natural_sort('type') %}
+{%     if aaa_server_group.type == 'tacacs+' %}
 !
 aaa group server {{ aaa_server_group.type }} {{ aaa_server_group.name }}
 {%         if aaa_server_group.servers is arista.avd.defined %}
