--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -32,6 +32,8 @@
 {% include 'eos/terminal.j2' %}
 {# aliases #}
 {% include 'eos/aliases.j2' %}
+{# logging event storm-control #}
+{% include 'eos/logging-event-storm-control.j2' %}
 {# daemon TerminAttr #}
 {% include 'eos/daemon-terminattr.j2' %}
 {# daemons #}
