--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/logging-event-storm-control.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/logging-event-storm-control.j2
@@ -4,11 +4,12 @@
  that can be found in the LICENSE file.
 #}
 {# eos - logging even storm-control #}
-{% if logging.event.storm_control.discards.global is arista.avd.defined(true) %}
+{% if logging.event.storm_control.discards.global is arista.avd.defined(true) or logging.event.storm_control.discards.interval is arista.avd.defined %}
 !
+{% endif %}
+{% if logging.event.storm_control.discards.global is arista.avd.defined(true) %}
 logging event storm-control discards global
 {% endif %}
 {% if logging.event.storm_control.discards.interval is arista.avd.defined %}
 logging event storm-control discards interval {{ logging.event.storm_control.discards.interval }}
-!
 {% endif %}
