Refactor(eos_cli_config_gen): Rarrange eos_cli output to match with EOS

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/management-ssh.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/management-ssh.j2
@@ -8,7 +8,8 @@
 !
 management ssh
 {%     if management_ssh.access_groups is arista.avd.defined %}
-{%         for access_group in management_ssh.access_groups %}
+{# TODO mark name as key required in the schema #}
+{%         for access_group in management_ssh.access_groups | arista.avd.natural_sort("name") %}
 {%             set acl_cli = "ip access-group " ~ access_group.name %}
 {%             if access_group.vrf is arista.avd.defined %}
 {%                 set acl_cli = acl_cli ~ " vrf " ~ access_group.vrf  %}
@@ -33,11 +34,20 @@ management ssh
 {%     if management_ssh.authentication.protocols is arista.avd.defined  %}
    authentication protocol {{ management_ssh.authentication.protocols | join(" ") }}
 {%     endif %}
+{%     if management_ssh.hostkey.server is arista.avd.defined %}
+   hostkey server {{ management_ssh.hostkey.server | join(" ") }}
+{%     endif %}
 {%     if management_ssh.connection.limit is arista.avd.defined %}
    connection limit {{ management_ssh.connection.limit }}
 {%     endif %}
 {%     if management_ssh.connection.per_host is arista.avd.defined %}
    connection per-host {{ management_ssh.connection.per_host }}
+{%     endif %}
+{%     if management_ssh.fips_restrictions is arista.avd.defined(true) %}
+   fips restrictions
+{%     endif %}
+{%     if management_ssh.hostkey.client_strict_checking is arista.avd.defined(true) %}
+   hostkey client strict-checking
 {%     endif %}
 {%     if management_ssh.authentication.empty_passwords is arista.avd.defined  %}
    authentication empty-passwords {{ management_ssh.authentication.empty_passwords }}
@@ -56,15 +66,6 @@ management ssh
 {%     endif %}
 {%     if management_ssh.mac is arista.avd.defined %}
    mac {{ management_ssh.mac | join(" ") }}
-{%     endif %}
-{%     if management_ssh.hostkey.server is arista.avd.defined %}
-   hostkey server {{ management_ssh.hostkey.server | join(" ") }}
-{%     endif %}
-{%     if management_ssh.fips_restrictions is arista.avd.defined(true) %}
-   fips restrictions
-{%     endif %}
-{%     if management_ssh.hostkey.client_strict_checking is arista.avd.defined(true) %}
-   hostkey client strict-checking
 {%     endif %}
 {%     if management_ssh.hostkey.server_cert is arista.avd.defined %}
    hostkey server cert {{ management_ssh.hostkey.server_cert }}
