Fixing vlans none in doc template

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -41,7 +41,11 @@
 {%                     if port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
 {%                         do switchport_vlans.extend(port_channel_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand | map('int')) %}
 {%                     endif %}
-{%                     set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
+{%                     if switchport_vlans %}
+{%                         set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
+{%                     elif port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined("none") %}
+{%                         set switchport_vlans = port_channel_interface.switchport.trunk.allowed_vlan %}
+{%                     endif %}
 {%                 endif %}
 {%                 if port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
 {%                     set native_vlan = "tag" %}
@@ -87,7 +91,11 @@
 {%                     if ethernet_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
 {%                         do switchport_vlans.extend(ethernet_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand | map('int')) %}
 {%                     endif %}
-{%                     set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
+{%                     if switchport_vlans %}
+{%                         set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
+{%                     elif ethernet_interface.switchport.trunk.allowed_vlan is arista.avd.defined("none") %}
+{%                         set switchport_vlans = ethernet_interface.switchport.trunk.allowed_vlan %}
+{%                     endif %}
 {%                 endif %}
 {%                 if ethernet_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
 {%                     set native_vlan = "tag" %}
