--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-path-selection.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-path-selection.j2
@@ -126,7 +126,9 @@ router path-selection
 {%         endif %}
 {%         for rule in policy.rules | arista.avd.natural_sort('id') %}
 {%             if rule.application_profile is arista.avd.defined %}
+{%                 if policy.default_match is arista.avd.defined or not loop.first %}
       !
+{%                 endif %}
       {{ rule.id }} application-profile {{ rule.application_profile }}
 {%                 if rule.load_balance is arista.avd.defined %}
          load-balance {{ rule.load_balance }}
