--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -43,7 +43,7 @@
 {%                     endif %}
 {%                     if switchport_vlans %}
 {%                         set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
-{%                     elif port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined("none") %}
+{%                     else %}
 {%                         set switchport_vlans = port_channel_interface.switchport.trunk.allowed_vlan %}
 {%                     endif %}
 {%                 endif %}
